# homework-project

./: .gitignore  README.md  compile_commands.json  intern.cpp  intern.h
MyCompiler/: CMakeLists.txt  Makefile  README.md  ast.cpp  ast.h  compile_commands.json  intern.cpp  intern.h  lang.l  lang.ypp  lang.yy  object.cpp  object.h  parse.cpp  parse.h  run_test.sh  xmake.lua
MyCompiler/doc/: graph.dot  write-a-compiler.md  write-a-compiler.tex
